--- a/week2/week2-NER.ipynb
+++ b/week2/week2-NER.ipynb
@@ -80,10 +80,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import re\n",
-    "#re_url = re.compile(r'^https?:\\/\\/[0-9a-zA-Z\\_\\.\\-\\/]*')\n",
-    "#re_nickname = re.compile(r'^@[0-9a-zA-Z\\_\\.\\-\\/]*')\n",
-    "\n",
     "def read_data(file_path):\n",
     "    tokens = []\n",
     "    tags = []\n",
@@ -102,12 +98,6 @@
     "            token, tag = line.split()\n",
     "            # Replace all urls with <URL> token\n",
     "            # Replace all users with <USR> token\n",
-    "            \n",
-    "            ######################################\n",
-    "            ######### YOUR CODE HERE #############\n",
-    "            ######################################\n",
-    "            #token = re.sub(re_url, '<URL>', token)\n",
-    "            #token = re.sub(re_nickname, '<USR>', token)\n",
     "            if token.startswith('http://') or token.startswith('https://'):\n",
     "                token = '<URL>'\n",
     "            elif token.startswith('@'):\n",
@@ -394,10 +384,7 @@
     "    # To do so, you should extract unique tokens/tags from the tokens_or_tags variable\n",
     "    # and then index them (for example, you can add them into the list idx2tok\n",
     "    # and for each token/tag save the index into tok2idx).\n",
-    "    \n",
-    "    ######################################\n",
-    "    ######### YOUR CODE HERE #############\n",
-    "    ######################################\n",
+    "\n",
     "    idx = 0\n",
     "    for token in special_tokens:\n",
     "        tok2idx[token] = idx\n",
@@ -620,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,13 +621,13 @@
     "    # Create RNN cells (for example, tf.nn.rnn_cell.BasicLSTMCell) with n_hidden_rnn number of units \n",
     "    # and dropout (tf.nn.rnn_cell.DropoutWrapper), initializing all *_keep_prob with dropout placeholder.\n",
     "    forward_cell = tf.contrib.rnn.DropoutWrapper(\n",
-    "        tf.contrib.rnn.BasicLSTMCell(n_hidden_rnn, forget_bias=3.0), \n",
+    "        tf.contrib.rnn.BasicLSTMCell(n_hidden_rnn), \n",
     "        input_keep_prob = self.dropout_ph, \n",
     "        output_keep_prob = self.dropout_ph, \n",
     "        state_keep_prob = self.dropout_ph\n",
     "    )\n",
     "    backward_cell = tf.contrib.rnn.DropoutWrapper(\n",
-    "        tf.contrib.rnn.BasicLSTMCell(n_hidden_rnn, forget_bias=3.0), \n",
+    "        tf.contrib.rnn.BasicLSTMCell(n_hidden_rnn), \n",
     "        input_keep_prob = self.dropout_ph, \n",
     "        output_keep_prob = self.dropout_ph, \n",
     "        state_keep_prob = self.dropout_ph\n",
@@ -670,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,14 +861,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict_for_batch(self, session, x_batch, lengths):\n",
-    "    ######################################\n",
-    "    ######### YOUR CODE HERE #############\n",
-    "    ######################################\n",
     "    predictions = session.run(self.predictions, feed_dict={self.input_batch:x_batch,\n",
     "                                                        self.lengths:lengths})\n",
     "    return predictions"
@@ -889,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1022,8 +1006,8 @@
     "batch_size = 32\n",
     "n_epochs = 4\n",
     "learning_rate = 0.005\n",
-    "learning_rate_decay = 2\n",
-    "dropout_keep_probability = 0.1"
+    "learning_rate_decay = 1.5\n",
+    "dropout_keep_probability = 0.5"
    ]
   },
   {
@@ -1042,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1053,47 +1037,47 @@
       "\n",
       "-------------------- Epoch 1 of 4 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 60176 phrases; correct: 169.\n",
+      "processed 105778 tokens with 4489 phrases; found: 79078 phrases; correct: 192.\n",
       "\n",
-      "precision:  0.28%; recall:  3.76%; F1:  0.52\n",
+      "precision:  0.24%; recall:  4.28%; F1:  0.46\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 7423 phrases; correct: 15.\n",
+      "processed 12836 tokens with 537 phrases; found: 9625 phrases; correct: 32.\n",
       "\n",
-      "precision:  0.20%; recall:  2.79%; F1:  0.38\n",
+      "precision:  0.33%; recall:  5.96%; F1:  0.63\n",
       "\n",
       "-------------------- Epoch 2 of 4 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 2 phrases; correct: 0.\n",
+      "processed 105778 tokens with 4489 phrases; found: 2560 phrases; correct: 594.\n",
       "\n",
-      "precision:  0.00%; recall:  0.00%; F1:  0.00\n",
+      "precision:  23.20%; recall:  13.23%; F1:  16.85\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 5 phrases; correct: 0.\n",
+      "processed 12836 tokens with 537 phrases; found: 232 phrases; correct: 49.\n",
       "\n",
-      "precision:  0.00%; recall:  0.00%; F1:  0.00\n",
+      "precision:  21.12%; recall:  9.12%; F1:  12.74\n",
       "\n",
       "-------------------- Epoch 3 of 4 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 298 phrases; correct: 27.\n",
+      "processed 105778 tokens with 4489 phrases; found: 4424 phrases; correct: 1609.\n",
       "\n",
-      "precision:  9.06%; recall:  0.60%; F1:  1.13\n",
+      "precision:  36.37%; recall:  35.84%; F1:  36.10\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 40 phrases; correct: 8.\n",
+      "processed 12836 tokens with 537 phrases; found: 320 phrases; correct: 116.\n",
       "\n",
-      "precision:  20.00%; recall:  1.49%; F1:  2.77\n",
+      "precision:  36.25%; recall:  21.60%; F1:  27.07\n",
       "\n",
       "-------------------- Epoch 4 of 4 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 757 phrases; correct: 72.\n",
+      "processed 105778 tokens with 4489 phrases; found: 4831 phrases; correct: 2861.\n",
       "\n",
-      "precision:  9.51%; recall:  1.60%; F1:  2.74\n",
+      "precision:  59.22%; recall:  63.73%; F1:  61.39\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 88 phrases; correct: 10.\n",
+      "processed 12836 tokens with 537 phrases; found: 414 phrases; correct: 164.\n",
       "\n",
-      "precision:  11.36%; recall:  1.86%; F1:  3.20\n",
+      "precision:  39.61%; recall:  30.54%; F1:  34.49\n",
       "\n",
       "...training finished.\n"
      ]
@@ -1133,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1141,77 +1125,77 @@
      "output_type": "stream",
      "text": [
       "-------------------- Train set quality: --------------------\n",
-      "processed 105778 tokens with 4489 phrases; found: 1137 phrases; correct: 106.\n",
+      "processed 105778 tokens with 4489 phrases; found: 4888 phrases; correct: 3170.\n",
       "\n",
-      "precision:  9.32%; recall:  2.36%; F1:  3.77\n",
+      "precision:  64.85%; recall:  70.62%; F1:  67.61\n",
       "\n",
-      "\t     company: precision:   19.16%; recall:    9.18%; F1:   12.41; predicted:   308\n",
+      "\t     company: precision:   75.30%; recall:   79.16%; F1:   77.18; predicted:   676\n",
       "\n",
-      "\t    facility: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:   138\n",
+      "\t    facility: precision:   68.63%; recall:   70.38%; F1:   69.50; predicted:   322\n",
       "\n",
-      "\t     geo-loc: precision:    7.09%; recall:    4.72%; F1:    5.67; predicted:   663\n",
+      "\t     geo-loc: precision:   79.01%; recall:   92.57%; F1:   85.25; predicted:  1167\n",
       "\n",
-      "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     3\n",
       "\n",
-      "\t musicartist: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t musicartist: precision:   17.39%; recall:    3.45%; F1:    5.76; predicted:    46\n",
       "\n",
-      "\t       other: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     6\n",
+      "\t       other: precision:   68.95%; recall:   75.69%; F1:   72.17; predicted:   831\n",
       "\n",
-      "\t      person: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t      person: precision:   52.75%; recall:   93.12%; F1:   67.35; predicted:  1564\n",
       "\n",
-      "\t     product: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:    21\n",
+      "\t     product: precision:   32.49%; recall:   24.21%; F1:   27.75; predicted:   237\n",
       "\n",
-      "\t  sportsteam: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t  sportsteam: precision:   83.33%; recall:   16.13%; F1:   27.03; predicted:    42\n",
       "\n",
-      "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     1\n",
+      "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n",
       "-------------------- Validation set quality: --------------------\n",
-      "processed 12836 tokens with 537 phrases; found: 121 phrases; correct: 15.\n",
+      "processed 12836 tokens with 537 phrases; found: 437 phrases; correct: 184.\n",
       "\n",
-      "precision:  12.40%; recall:  2.79%; F1:  4.56\n",
+      "precision:  42.11%; recall:  34.26%; F1:  37.78\n",
       "\n",
-      "\t     company: precision:   22.45%; recall:   10.58%; F1:   14.38; predicted:    49\n",
+      "\t     company: precision:   59.76%; recall:   47.12%; F1:   52.69; predicted:    82\n",
       "\n",
-      "\t    facility: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     9\n",
+      "\t    facility: precision:   36.00%; recall:   26.47%; F1:   30.51; predicted:    25\n",
       "\n",
-      "\t     geo-loc: precision:    6.56%; recall:    3.54%; F1:    4.60; predicted:    61\n",
+      "\t     geo-loc: precision:   67.42%; recall:   53.10%; F1:   59.41; predicted:    89\n",
       "\n",
       "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n",
-      "\t musicartist: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t musicartist: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     1\n",
       "\n",
-      "\t       other: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     2\n",
+      "\t       other: precision:   34.62%; recall:   33.33%; F1:   33.96; predicted:    78\n",
       "\n",
-      "\t      person: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t      person: precision:   27.66%; recall:   34.82%; F1:   30.83; predicted:   141\n",
       "\n",
-      "\t     product: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t     product: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:    21\n",
       "\n",
       "\t  sportsteam: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n",
       "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n",
       "-------------------- Test set quality: --------------------\n",
-      "processed 13258 tokens with 604 phrases; found: 145 phrases; correct: 11.\n",
+      "processed 13258 tokens with 604 phrases; found: 616 phrases; correct: 235.\n",
       "\n",
-      "precision:  7.59%; recall:  1.82%; F1:  2.94\n",
+      "precision:  38.15%; recall:  38.91%; F1:  38.52\n",
       "\n",
-      "\t     company: precision:   11.63%; recall:    5.95%; F1:    7.87; predicted:    43\n",
+      "\t     company: precision:   58.49%; recall:   36.90%; F1:   45.26; predicted:    53\n",
       "\n",
-      "\t    facility: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:    20\n",
+      "\t    facility: precision:   45.45%; recall:   42.55%; F1:   43.96; predicted:    44\n",
       "\n",
-      "\t     geo-loc: precision:    7.59%; recall:    3.64%; F1:    4.92; predicted:    79\n",
+      "\t     geo-loc: precision:   72.00%; recall:   54.55%; F1:   62.07; predicted:   125\n",
       "\n",
       "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n",
-      "\t musicartist: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t musicartist: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     1\n",
       "\n",
-      "\t       other: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     2\n",
+      "\t       other: precision:   22.94%; recall:   37.86%; F1:   28.57; predicted:   170\n",
       "\n",
-      "\t      person: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t      person: precision:   28.34%; recall:   50.96%; F1:   36.43; predicted:   187\n",
       "\n",
-      "\t     product: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     1\n",
+      "\t     product: precision:    5.71%; recall:    7.14%; F1:    6.35; predicted:    35\n",
       "\n",
-      "\t  sportsteam: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t  sportsteam: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     1\n",
       "\n",
       "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n"
