--- a/project/week5-project.ipynb
+++ b/project/week5-project.ipynb
@@ -29,11 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File data/dialogues.tsv is already downloaded.\nFile data/tagged_posts.tsv is already downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -73,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -145,10 +153,15 @@
     "    # Pickle the trained vectorizer to 'vectorizer_path'\n",
     "    # Don't forget to open the file in writing bytes mode.\n",
     "    \n",
-    "    ######################################\n",
-    "    ######### YOUR CODE HERE #############\n",
-    "    ######################################\n",
-    "    \n",
+    "    tfidf_vectorizer = TfidfVectorizer(min_df=5, \n",
+    "                                       max_df=0.9, \n",
+    "                                       ngram_range=(1, 2),\n",
+    "                                       token_pattern='(\\S+)')\n",
+    "    tfidf_vectorizer.fit(X_train)\n",
+    "    X_train = tfidf_vectorizer.transform(X_train)\n",
+    "    X_test = tfidf_vectorizer.transform(X_test)\n",
+    "    with open(vectorizer_path, 'wb') as vectorizer_file:\n",
+    "        pickle.dump(tfidf_vectorizer, vectorizer_file)\n",
     "    return X_train, X_test"
    ]
   },
@@ -161,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -182,22 +195,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>82925</th>\n",
+       "      <td>Donna, you are a muffin.</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48774</th>\n",
+       "      <td>He was here last night till about two o'clock....</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55394</th>\n",
+       "      <td>All right, then make an appointment with her s...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90806</th>\n",
+       "      <td>Hey, what is this-an interview? We're supposed...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107758</th>\n",
+       "      <td>Yeah. He's just a friend of mine I was trying ...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>82925</th>\n",
+       "      <td>Donna, you are a muffin.</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48774</th>\n",
+       "      <td>He was here last night till about two o'clock....</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55394</th>\n",
+       "      <td>All right, then make an appointment with her s...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90806</th>\n",
+       "      <td>Hey, what is this-an interview? We're supposed...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107758</th>\n",
+       "      <td>Yeah. He's just a friend of mine I was trying ...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dialogue_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2168983</th>\n",
+       "      <td>43837842</td>\n",
+       "      <td>Efficient Algorithm to compose valid expressio...</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1084095</th>\n",
+       "      <td>15747223</td>\n",
+       "      <td>Why does this basic thread program fail with C...</td>\n",
+       "      <td>c\\c++</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1049020</th>\n",
+       "      <td>15189594</td>\n",
+       "      <td>Link to scroll to top not working</td>\n",
+       "      <td>javascript</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200466</th>\n",
+       "      <td>3273927</td>\n",
+       "      <td>Is it possible to implement ping on windows ph...</td>\n",
+       "      <td>c#</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1200249</th>\n",
+       "      <td>17684551</td>\n",
+       "      <td>GLSL normal mapping issue</td>\n",
+       "      <td>c\\c++</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2168983</th>\n",
+       "      <td>43837842</td>\n",
+       "      <td>Efficient Algorithm to compose valid expressio...</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1084095</th>\n",
+       "      <td>15747223</td>\n",
+       "      <td>Why does this basic thread program fail with C...</td>\n",
+       "      <td>c\\c++</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1049020</th>\n",
+       "      <td>15189594</td>\n",
+       "      <td>Link to scroll to top not working</td>\n",
+       "      <td>javascript</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200466</th>\n",
+       "      <td>3273927</td>\n",
+       "      <td>Is it possible to implement ping on windows ph...</td>\n",
+       "      <td>c#</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1200249</th>\n",
+       "      <td>17684551</td>\n",
+       "      <td>GLSL normal mapping issue</td>\n",
+       "      <td>c\\c++</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stackoverflow_df.head()"
    ]
@@ -211,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -222,14 +475,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dialogue_df['text'] = ######### YOUR CODE HERE #############\n",
-    "stackoverflow_df['title'] = ######### YOUR CODE HERE #############"
+    "dialogue_df['text'] = dialogue_df['text'].apply(text_prepare)\n",
+    "stackoverflow_df['title'] = dialogue_df['text'].apply(text_prepare)"
    ]
   },
   {
@@ -251,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -262,19 +515,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/python3/3.6.0/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size = 360000, test size = 40000\n"
+     ]
+    }
+   ],
    "source": [
-    "X = np.concatenate([dialogue_df['text'].values, stackoverflow_df['title'].values])\n",
+    "X = np.concatenate([dialogue_df['text'].values.astype('U'), stackoverflow_df['title'].values.astype('U')])\n",
     "y = ['dialogue'] * dialogue_df.shape[0] + ['stackoverflow'] * stackoverflow_df.shape[0]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = ######### YOUR CODE HERE ##########\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,train_size=0.9,random_state=0)\n",
     "print('Train size = {}, test size = {}'.format(len(X_train), len(X_test)))\n",
     "\n",
-    "X_train_tfidf, X_test_tfidf = ######### YOUR CODE HERE ###########"
+    "X_train_tfidf, X_test_tfidf = tfidf_features(X_train, X_test, './tfidf_vectorizer.pkl')"
    ]
   },
   {
@@ -595,9 +863,9 @@
   "latex_envs": {
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
-   "current_citInitial": 1,
+   "current_citInitial": 1.0,
    "eqLabelWithNumbers": true,
-   "eqNumInitial": 0
+   "eqNumInitial": 0.0
   }
  },
  "nbformat": 4,
